chore: add plugin-vue doc

--- a/versioned_docs/version-2.0/docs/changelog/v2.md
+++ b/versioned_docs/version-2.0/docs/changelog/v2.md
@@ -228,7 +228,7 @@ To use v2.13.0, you have to change prettier file config in package.json.
 
 `2023-09-18`
 
-- feat: `esboot`配置支持导出一个函数，参数为`compileTimeConfig`
+- feat: `ESBoot`配置支持导出一个函数，参数为`compileTimeConfig`
 
 ### v2.4.1
 
