feat: add i18n doc

--- a/docs/docs/development/i18n.md
+++ b/docs/docs/development/i18n.md
@@ -1,5 +1,144 @@
 ---
-sidebar_position: 0
-title: i18n
+sidebar_position: 1
+title: I18n
 description: I18N development for ESBoot.
 ---
+
+`ESBoot`基于[React-intl](https://github.com/formatjs/react-intl)实现的国际化支持。
+
+## 目录结构
+
+在`ESBoot`中，**限定了多语言文件只能写在`src/lang`目录下**，经典的目录结构如下：
+
+```plaintext
+.
+├── src/
+│   ├── lang/
+│   │   ├── zh-CN.json # 中文简体
+│   │   ├── zh-TW.json # 中文繁体
+│   │   ├── en-US.json # 英文
+│   │   └── ...
+│   └── ...
+```
+
+:::tip 目录结构
+📚 为什么会限定多语言文件只能写在`src/lang`目录下？
+
+- 使用`json`来管理多语言，可以避免`ts`的灵活性带来的问题，特别是后期增加语言种类的时候，可以避免到处导入导致的问题。
+- `ESBoot`的`lint`规则会检查`lang`目录下的语言文件，确保语言key的合理、规范。
+- 统一管理多语言文件，可以避免重复字段的问题，也可以避免遗漏字段的问题。
+:::
+
+## 多语言key
+
+### 使用
+
+下面是一个标准的多语言json文件示例：
+
+```json
+{
+  "global": {
+    "project": "测试项目名称",
+    "boundary_error_title": "哎呀，出错了！",
+    "apologize": "抱歉，应用程序遇到了一些问题。",
+    "retry": "重试"
+  },
+  "south-stock-ranking": {
+    "south_stock_ranking_title": "南方股票排行榜"
+  },
+  "north-model": {
+    "north_model_title": "北方模型"
+  }
+}
+```
+
+在页面中使用的使用可以这样使用：
+
+```tsx
+import { FormattedMessage } from 'react-intl';
+
+function MyComponent() {
+  return (
+    <div>
+      <p>
+        <FormattedMessage id="global.project" />
+      </p>
+
+      <p>
+        <FormattedMessage id="south_stock_ranking.south_stock_ranking_title" />
+      </p>
+
+      <p>
+        <FormattedMessage id="north_model.north_model_title" />
+      </p>
+    </div>
+  );
+}
+```
+
+如果使用的是标准的`ESBoot`模版，使用的时候可以使用`xx.xx`来代表层级，这样更方便管理。
+
+### key命名规范
+
+在`ESBoot`中，多语言key的命名规范如下：
+
+使用下划线命名（如 `boundary_error_title/boundary-error-title`），避免驼峰命名/避免大写命名/避免中文命名。
+
+`ESBoot`内置的`lint`规则会检查多语言key的命名规范，如果发现不符合规范，会给出警告。
+
+:::tip 最佳实践
+
+一级统一使用中横线命名，因为一级代表一个页面，遵循文件命名规范，应该使用中横线。
+
+除了一级都应该使用单词或者下划线拼接。
+:::
+
+### langJsonPicker
+
+在`ESBoot`中，可以通过[useLangJsonPicker](../config#uselangjsonpicker)字段来配置需要加载的语言一级key。
+
+例如你有A/B两个页面，多语言文件如下：
+
+```json
+{
+  "global": {
+    "description": "通用介绍"
+  },
+  "a": {
+    "title": "A页面标题"
+  },
+  "b": {
+    "title": "B页面标题"
+  }
+}
+```
+
+此时你希望在A页面中只加载A的标题，在B页面中只加载B的标题，可以在A页面中配置：
+
+*a.entry.tsx*
+
+```ts
+export default {
+  langJsonPicker: ['a', 'global'],
+};
+```
+
+这样在打包的时候就只会打一级分类`A`下面的多语言key，会自动忽略`B`下面的多语言key，达到降低页面多语言文件体积的目的。
+
+## vscode插件
+
+回头看一下上面例子的代码：
+
+```tsx
+<FormattedMessage id="south_stock_ranking.south_stock_ranking_title" />
+```
+
+你会发现内容很不方便阅读，因为无法清晰的看到多语言key背后的内容。所以推荐安装[i18n Ally](https://marketplace.visualstudio.com/items?itemName=Lokalise.i18n-ally)插件。
+
+安装完之后，在代码中查看、修改多语言内容，效果如下：
+
+![i18n Ally 效果](../assets/CleanShot%202025-12-03%20at%2015.18.55.png)
+
+:::tip 最佳实践
+你也可以利用这个插件的功能，开发的时候只写一个语言，再批量填充其他语言。
+:::
