chore: add docs

--- a/docs/docs/development/i18n.md
+++ b/docs/docs/development/i18n.md
@@ -6,6 +6,35 @@ description: I18N development for ESBoot.
 
 `ESBoot`基于[React-intl](https://github.com/formatjs/react-intl)实现的国际化支持。
 
+i18n 一般默认用的 [React Intl](https://github.com/formatjs/react-intl) 或者 [React I18next](https://react.i18next.com/)。
+
+常规情况下需要支持简繁体，所以最少需要两个语言包。一些特殊情况也需要支持英文，所以可能需要三个语言包。
+
+## 不推荐的做法（使用 TypeScript）
+
+之前一般都是就近创建一个 `lang` 目录，里面有：
+
+- `zh-CN.ts`
+- `zh-TW.ts`
+- `en-US.ts`
+
+但是这样会有一个问题：
+
+- `ts` 太过于灵活，甚至可以互相引用和写逻辑
+- 如果创建的文件太多，会导致多语言很分散，不方便管理，里面有大量的重复字段
+
+这样对于项目的维护来说非常不友好，特别是开始有单个多语言，后续需要加语言包的场景。
+
+## 推荐的做法（使用 JSON）
+
+所以，推荐使用 `json` 来管理多语言。
+
+**优势**：
+
+- 使用 `json` 来管理多语言，可以避免 `ts` 的灵活性带来的问题
+- 使用 `json` 来管理多语言，可以避免创建大量的文件，方便管理
+- 使用 `json` 来管理多语言，可以避免重复字段的问题
+
 ## 目录结构
 
 在`ESBoot`中，**限定了多语言文件只能写在`src/lang`目录下**，经典的目录结构如下：
@@ -93,7 +122,7 @@ function MyComponent() {
 除了一级都应该使用单词或者下划线拼接。
 :::
 
-### langJsonPicker
+### langJsonPicker 与按需加载
 
 在`ESBoot`中，可以通过[useLangJsonPicker](../config#uselangjsonpicker)字段来配置需要加载的语言一级key。
 
@@ -125,6 +154,22 @@ export default {
 
 这样在打包的时候就只会打一级分类`A`下面的多语言key，会自动忽略`B`下面的多语言key，达到降低页面多语言文件体积的目的。
 
+但是这样产生了一个新的问题：多语言包会变大，在 `MP` 项目中可能会有很多页面，所以一定要开启 [useLangJsonPicker](../config#uselangjsonpicker)，会根据 [Page Metadata](./entry-files#langjsonpicker) 的配置来按需加载语言包。
+
+**推荐配置**：
+
+在 `Page Metadata` 中配置如下：
+
+```ts
+export default {
+  // 公共的字段
+  // 当前页面的字段
+  langJsonPicker: ['global', 'test', '...Other Common Fields'],
+};
+```
+
+这样就可以大大减少语言包的大小，和提升加载速度。
+
 ## vscode插件
 
 回头看一下上面例子的代码：
@@ -142,3 +187,10 @@ export default {
 :::tip 最佳实践
 你也可以利用这个插件的功能，开发的时候只写一个语言，再批量填充其他语言。
 :::
+
+## 最佳实践总结
+
+- **统一管理**：所有语言包放在 `src/lang` 目录下
+- **层级结构**：使用 `xx.xx.xx` 来区分不同的层级
+- **按需加载**：在 `MP` 模式下，务必开启 `useLangJsonPicker` 并按需配置
+- **命名规范**：使用下划线命名（如 `boundary_error_title`），避免驼峰命名
